change the title of site

--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: 'Hamilton Health Innovation Week 2017 • April 24th – 30th'
+title: 'Hacking Health Hamilton'
 description: 'Hamilton, Ontario — Join health innovators as they turn inspiration into innovation!'
 url: 'http://hamiltonhealthinnovationweek.ca' # the base hostname & protocol for your site
 footer_text: 'Created and hosted by <a href="http://hhhamilton.ca">Hacking Health Hamilton</a>.'
