--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: 'Hacking Health Hamilton'
-description: 'Hamilton, Ontario — Join health innovators as they turn inspiration into innovation!'
-url: 'http://hamiltonhealthinnovationweek.ca' # the base hostname & protocol for your site
+description: 'We bring together healthcare innovators in Hamilton, Ontario'
+url: 'http://hhhamilton.ca' # the base hostname & protocol for your site
 footer_text: 'Created and hosted by <a href="http://hhhamilton.ca">Hacking Health Hamilton</a>.'
 
 # Admin Settings
