--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
 main:
     - { url: '/#', text: 'Top' }
-    - { url: '/#about', text: 'About' }
+    - { url: '/about/', text: 'About' }
     - { url: '/#news', text: 'News' }
     - { url: '/#contact', text: 'Contact' }
