--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,3 @@
 main:
-    - { url: '/#', text: 'Top' }
     - { url: '/about/', text: 'About' }
-    - { url: '/#news', text: 'News' }
-    - { url: '/#contact', text: 'Contact' }
+    - { url: 'https://www.meetup.com/Hacking-Health-Hamilton/', text: 'HHH on Meetup' }
