--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,4 +1,5 @@
 main:
+    - { url: 'https://www.eventbrite.ca/e/hacking-health-hamilton-hackathon-2019-tickets-60104994657', text: 'Hackathon 2019' } 
     - { url: '/about/', text: 'About' }
     - { url: 'https://www.meetup.com/Hacking-Health-Hamilton/', text: 'HHH on Meetup' }
     - { url: 'http://hhhamilton.ca/newsletter/', text: 'Newsletter' }
